Use library namespace by default for docker.io images
Signed-off-by: Valentin Delaye <jonesbusy@users.noreply.github.com>